infra/k8s/cdbcalculator-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdbcalculator-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdbcalculator-mongo
  template:
    metadata:
      labels:
        app: cdbcalculator-mongo
    spec:
      containers:
        - name: cdbcalculator-mongo
          image: mongo
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: cdbcalculator-mongo-srv
spec:
  selector:
    app: cdbcalculator-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
